# flyte-sdk

./: .gitignore  .ignore  .pre-commit-config.yaml  CLI_PLUGINS.md  CONTRIBUTING.md  DATAFRAME_PATTERNS.md  Dockerfile.test  FEATURES.md  Makefile  README.md  Untitled.ipynb  demo_example.py  demo_example_fixed.py  demo_example_fixed2.py  demo_fixed_simple.py  deploy_task_test.py  dns_diagnostic.py  example.py  image-builder-audit.md  oai_metrics.py  play_metrics.py  prek.toml  pyproject.toml  settings.proto  test_hitl_app.py  test_watch_manual.py  updated_filtered_flyte_importtime.txt  updated_flyte_importtime.txt
example-cli-plugin/: README.md  pyproject.toml
example-cli-plugin/src/flyte_app_plugin/: __init__.py  commands.py  hooks.py
examples/agents/autosec/: .dockerignore  README.md  SPEC.md  pyproject.toml
examples/agents/autosec/tests/: daytona_sandbox.py
examples/deploy_patterns/poetry_project/: poetry_example.py  poetry_project_test.py  poetryproject_test.py  pyproject.toml
examples/deploy_patterns/test_secret/: pyproject.toml  wf.py
examples/deploy_patterns/uv_workspace/: README.md  REASDME.md  main.py  pyproject.toml  run.sh
examples/deploy_patterns/uv_workspace/albatross/: README.md
examples/deploy_patterns/uv_workspace/bird_feeder/: pyproject.toml
examples/deploy_patterns/uv_workspace/seeds/: pyproject.toml
examples/deploy_patterns/uv_workspace/src/: pyproject.toml  pyproject.yaml
examples/deploy_patterns/uv_workspace/tasks/: albatross.py
examples/genai/handoff/: PERFORMANCE_NOTES.md  README.md  README_AGENT_HANDOFF.md  WEB_UI_README.md  agent_handoff.py  app.py  pyproject.toml
examples/genai/handoff/static/: index.html
examples/image/custom_builder/: pyproject.toml
examples/ml/image_classification/: README.md  batch_inference.py  batch_inference_report.py  index.html  pyproject.toml  serving.py  training.py
examples/ml/ocr/: QUICKSTART.md  README.md  batch_ocr.py  batch_ocr_report.py  example_usage.py  ocr_processor.py  pyproject.toml
examples/project_structures/uv_project_local_dep/: README.md  pyproject.toml
examples/reference_stacks/flyres_stack/: 01_image_build_strategy.py  02_ray_distributed_training.py  04_experiment_tracking.py  08_end_to_end_ml_pipeline.py  COMPARISON.md  FLYTE_VS_DAGSTER_SLIDES.html  INDEX.md  QUICKSTART.md  README.md  SKYPILOT_INTEGRATION_SLIDES.html  SPEC.md  SPEC_SKYPILOT_INTEGRATION.md  SUMMARY.md  pyproject.toml  requirements.txt  slidedeck_app.py
examples/type_transformers/my_transformer/: pyproject.toml
plugins/agents/: README.md  pyproject.toml
plugins/agents/claude/: README.md  pyproject.toml
plugins/agents/core/: README.md  pyproject.toml
plugins/agents/crewai/: pyproject.toml
plugins/agents/deepagents/: README.md  pyproject.toml
plugins/agents/examples/: openai_crash_resume.py  openai_durable_agent.py  openai_handoffs.py  openai_multi_agent.py
plugins/agents/google/: README.md  pyproject.toml
plugins/agents/hermes/: pyproject.toml
plugins/agents/langchain/: pyproject.toml
plugins/agents/langgraph/: pyproject.toml
plugins/agents/mistral/: README.md  pyproject.toml
plugins/agents/openai/: README.md  pyproject.toml
plugins/agents/pydantic_ai/: pyproject.toml
plugins/agents/tests/: test_openai_durable.py  test_openai_tools.py
plugins/bio/: README.md  TODO.md  pyproject.toml
plugins/bio/examples/: untar_and_sort.py
plugins/bio/tests/: .gitignore  _constants.py  _utils.py  test_all.py  test_bedtools.py  test_bio_env.py  test_cat.py  test_gunzip.py  test_untar.py
plugins/codegen/: README.md  pyproject.toml
plugins/codegen/examples/: example_csv_processing.py  example_csv_processing_agent.py  example_csv_processing_sync.py  example_dataframe_analysis.py  example_dataframe_analysis_agent.py  example_durable_execution.py  example_durable_execution_agent.py  example_multi_input.py  example_multi_input_agent.py  example_prompt_only.py  example_prompt_only_agent.py
plugins/codegen/tests/: conftest.py  test_agent.py  test_agent_sdk_utils.py  test_agent_utils.py  test_extraction.py  test_llm_utils.py  test_prompts.py  test_schema.py  test_session.py  test_types.py
plugins/connectors/: Dockerfile  README.md  pyproject.toml
plugins/duckdb/: README.md  pyproject.toml
plugins/duckdb/tests/: test_connector.py  test_task.py
plugins/hitl/: README.md  pyproject.toml
plugins/hitl/tests/: test_app.py  test_event.py  test_helpers.py  test_html_templates.py
plugins/huggingface/: README.md  pyproject.toml
plugins/huggingface/examples/: hf_dataset_workflow.py
plugins/huggingface/tests/: conftest.py  test_df_transformer.py  test_prefetch.py
plugins/hydra/: README.md  pyproject.toml
plugins/hydra/examples/: examples.py  train.py
plugins/hydra/tests/: conftest.py  test_cli.py  test_launcher.py  test_run.py
plugins/jsonl/: README.md  pyproject.toml
plugins/jsonl/examples/: jsonl_arrow.py  jsonl_dir.py  jsonl_file.py
plugins/jsonl/tests/: conftest.py  test_jsonl_dir.py  test_jsonl_file.py
plugins/pandera/: README.md  pyproject.toml
plugins/pandera/tests/: conftest.py  test_pyspark_sql_transformer.py  test_transformer.py
plugins/polars/: README.md  pyproject.toml
plugins/polars/tests/: conftest.py  test_df_transformer.py
plugins/remote_tui/: README.md  REMOTE_TUI_PLUGIN.md  pyproject.toml
plugins/remote_tui/tests/: test_pagination.py  test_settings.py  test_sync.py
plugins/sglang/: README.md  pyproject.toml
plugins/sglang/tests/: conftest.py  test_app_environment.py
rs_controller/: .gitignore  AUTH_IMPLEMENTATION.md  Cargo.toml  Dockerfile.maturinx  Makefile  amazon_chain.pem  build.rs  pyproject.toml  rustfmt.toml  temp_cargo_config.toml  test_auth_direct.py  test_auth_simple.py  try_rust_controller.py
rs_controller/.cargo/: config.toml
rs_controller/src/: action.rs  core.rs  error.rs  informer.rs  lib.rs  lib_auth.rs
rs_controller/src/auth/: client_credentials.rs  config.rs  errors.rs  interceptor.rs  middleware.rs  mod.rs  retry_helper.rs  token_client.rs
rs_controller/src/proto/: flyteidl.service.rs  flyteidl.service.tonic.rs  mod.rs
(+2127 files in other folders)
