[project]
name = "flyte"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ketan Umare", email = "kumare3@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.2.1",
    "cloudpickle>=3.1.1",
    "docstring_parser>=0.16",
    "fsspec>=2025.3.0",
    "grpcio>=1.71.0",
    "obstore>=0.7.3",
    "protobuf>=6.30.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "rich-click==1.8.9", # As we are installing flyte in --pre mode, we need to pin rich-click to a stable version
    "httpx>=0.28.1,<1.0.0",
    "keyring>=25.6.0",
    "msgpack>=1.1.0",
    "toml>=0.10.2",
    "async-lru>=2.0.5",
    "mashumaro",
    "aiolimiter>=1.2.1",
    "flyteidl2==2.0.6",
    "packaging",
]

[project.scripts]
flyte = "flyte.cli.main:main"
a0 = "flyte._bin.runtime:main"
fserve = "flyte._bin.serve:main"
c0 = "flyte._bin.connect:main"

[project.entry-points."keyring.backends"]
flyte_keyring_file = "flyte._keyring.file"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
aiosqlite = [
    "aiosqlite>=0.21.0",
]
connector = [
    "grpcio-health-checking",
    "httpx",
    "prometheus-client",
]
examples-test = [
    # Dependencies for running integration tests on examples
    "polyglot-hello>=0.1.3",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "joblib",
    "nest-asyncio",
    "deltalake",
    "fastapi",
    "uvicorn",
    "lightning",
]
tui = [
    "textual>=0.80",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-xdist",
    "pytest-asyncio>=0.26.0",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.11.0",
    "setuptools-scm>=8.2.0",
    "google-cloud-bigquery>=3.31.0",
    "pandas",
    "pyarrow",
    "orjson",
    "docstring_parser",
    "jupyterlab>=4.4.3",
    "ipywidgets>=8.1.7",
    "mypy>=1.16.0",
    "kubernetes",
    "textual>=0.80",
]

[tool.setuptools]
include-package-data = true
license-files = ["licenses/*.txt", "LICENSE"]
package-dir = {"" = "src"}
script-files = [
    "src/flyte/_bin/runtime.py",
    "src/flyte/_bin/debug.py",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flyte*"]

[tool.setuptools_scm]
write_to = "src/flyte/_version.py"

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests against Flyte backend",
    "editable",
    "sandbox",
    "apps: App deployment tests using flyte.deploy",
    "gpu: Tests requiring GPU resources",
    "external: Tests requiring external services (BigQuery, etc.)",
    "stress: Stress/load tests (skip by default)",
    "secrets: Tests requiring secrets configuration",
]
norecursedirs = []
log_cli = true
log_cli_level = 20
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120
extend-exclude = [
    "src/flyte/remote/client/_protocols.py",
    "examples/reports",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "PLW",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "EXE",
    "ISC",
    "LOG",
    "PIE",
    "Q",
    "RSE",
    "FLY",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "FURB",
    "RUF",
]
ignore = ["PGH003", "PLC0415", "ASYNC210", "ASYNC240", "FURB122"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]


[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-unbound-attribute = "error"
possibly-unbound-import = "error"
