[package]
name = "flyte_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "flyte_controller_base"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# cloudidl = { path = "../../cloud/gen/pb_rust" }
# Note: maturin automatically adds "extension-module" when building the Python module
# We don't include it here so that binaries can link against Python
pyo3 = { version = "0.24", features = ["abi3-py310", "auto-initialize"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = { version = "0.13", features = ["std"] }
prost-types = { version = "0.13", features = ["std"] }
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "1.0"
# Using local flyteidl2 without extension-module
flyteidl2 = { path = "/Users/ytong/go/src/github.com/flyteorg/flyte/gen/rust" }
# flyteidl2 = "=2.0.0-alpha14"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.5"
http = "1.0"
urlencoding = "2.1"
bytes = "1.0"
http-body-util = "0.1"
