[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "flyte_controller_base"
version = "2.0.0b36.dev19+gd19aab4c.dirty"
description = "Rust controller for Union"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python", "Programming Language :: Rust"]
dependencies = [
    "flyteidl2>=2.0.0a14",
]
[tool.maturin]
module-name = "flyte_controller_base"
features = ["extension-module"]

[tool.ruff]
line-length = 120
ignore = ["E501"]
