[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "flyte_controller_base"
version = "2.2.3.dev56+g4e4a6d54"
description = "Rust controller for Union"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python", "Programming Language :: Rust"]
dependencies = [
    "flyteidl2==2.0.16",
]
[tool.maturin]
module-name = "flyte_controller_base"
no-default-features = true
features = ["extension-module"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]
