[project]
name = "flyteplugins-agents"
dynamic = ["version"]
description = "Run agents from existing agent SDKs on Flyte — durable, self-healing, observable orchestration."
readme = "README.md"
authors = [{ name = "Samhita Alla", email = "aallasamhita@gmail.com" }]
requires-python = ">=3.10"
# Core only. Each agent SDK is an optional extra so installing one framework
# never drags the others.
dependencies = ["flyte"]

[project.optional-dependencies]
# The OpenAI Agents SDK adapter (flyteplugins.agents.openai).
openai = ["openai-agents>=0.2.4"]
all = ["flyteplugins-agents[openai]"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "openai-agents>=0.2.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["flyteplugins*"]

[tool.setuptools_scm]
root = "../../"

[tool.pytest.ini_options]
norecursedirs = []
log_cli = true
log_cli_level = 20
markers = []
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "PLW",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "EXE",
    "ISC",
    "LOG",
    "PIE",
    "Q",
    "RSE",
    "FLY",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "FURB",
    "RUF",
]
ignore = ["PGH003", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.uv.sources]
flyte = { path = "../../", editable = true }
