[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flyteplugins-codegen"
dynamic = ["version"]
authors = [{ name = "Samhita Alla", email = "samhita@union.ai" }]
description = "LLM-powered code generation and evaluation plugin for Flyte"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flyte",
    "litellm",
    "pandas",
    "pandera[io]",
    "claude_agent_sdk",
]

[project.optional-dependencies]
agent-sdk = [
    "claude-agent-sdk",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
    "setuptools-scm>=8.2.0",
]

[tool.setuptools_scm]
root = "../../"

[tool.setuptools]
include-package-data = true
license-files = ["licenses/*.txt", "LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flyteplugins*"]

[tool.pytest.ini_options]
norecursedirs = []
log_cli = true
log_cli_level = 20
markers = []
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "PLW",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "EXE",
    "ISC",
    "LOG",
    "PIE",
    "Q",
    "RSE",
    "FLY",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "FURB",
    "RUF",
]
ignore = ["PGH003", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.uv.sources]
flyte = { path = "../../", editable = true }
