[project]
name = "flyteplugins-connectors"
dynamic = ["version"]
description = "Connector plugin for flyte"
readme = "README.md"
authors = [{ name = "Kevin Su", email = "pingsutw@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = [
    "flyte",
    "grpcio-health-checking",
    "prometheus-client"
]

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
]
databricks = [
    "aiohttp",
    "flyteplugins-spark",
]

[project.entry-points."flyte.connectors"]
bigquery = "flyteplugins.connectors.bigquery.connector:BigQueryConnector"
databricks = "flyteplugins.connectors.databricks.connector:DatabricksConnector"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
license-files = ["licenses/*.txt", "LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flyteplugins*"]

[tool.setuptools_scm]
root = "../../"

[tool.pytest.ini_options]
norecursedirs = []
log_cli = true
log_cli_level = 20
markers = []
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "PLW",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "EXE",
    "ISC",
    "LOG",
    "PIE",
    "Q",
    "RSE",
    "FLY",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "FURB",
    "RUF",
]
ignore = ["PGH003", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
