[project]
name = "flyteplugins-pandera"
dynamic = ["version"]
description = "pandera plugin for flyte"
readme = "README.md"
authors = [{ name = "Flyte Contributors", email = "admin@flyte.org" }]
requires-python = ">=3.10"
dependencies = [
    "flyte",
    "great_tables",
    "pandera",
    "pandas",
    "pyarrow",
    "fastparquet",
]

[project.optional-dependencies]
pandas = ["pandera[pandas]"]
polars = ["pandera[polars]"]
pyspark = [
    "pandera[pyspark]",
    "pandas<3",  # pyspark doesn't support pandas 3 yet
]

[dependency-groups]
dev = [
    "flyteplugins-spark>=2.0.9",
    "pandas>=2.0",
    "pandera[pyspark]>=0.30.1",
    "pyarrow",
    "pyspark>=4.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.entry-points."flyte.plugins.types"]
pandera = "flyteplugins.pandera.register:register_type_transformers"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
license-files = ["licenses/*.txt", "LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flyteplugins*"]

[tool.setuptools_scm]
root = "../../"

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = []
log_cli = true
log_cli_level = 20
markers = []
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "PLW",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "EXE",
    "ISC",
    "LOG",
    "PIE",
    "Q",
    "RSE",
    "FLY",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "FURB",
    "RUF",
]
ignore = ["PGH003", "PLC0415", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
"tests/test_pyspark_sql_transformer.py" = ["E402"]

[tool.uv.sources]
flyte = { path = "../../", editable = true }
flyteplugins-spark = { path = "../spark", editable = true }
