[project]
name = "ai2c-poetry-privaterepo"
version = "0.1.0"
description = ""
authors = [
    {name = "davidmirror-ops",email = "david.espejo@union.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ai2c_poetry_privaterepo", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
sample = {git = "https://github.com/davidmirror-ops/samplemod.git@d469f2f5e0a472be2c7d95ff90ed46e975810dc8", rev = "master"}
flyte = "2.0.0b25"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
