[project]
name = "albatross"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bird-feeder",
    "tqdm>=4,<5",
    "flyte==2.0.0b24",
    "flyteidl2==0.1.0.dev97388",
]


[tool.uv.workspace]
members = ["bird_feeder", "seeds"]


[tool.uv.sources]
bird-feeder = { workspace = true }  # points to the bird-feeder package in the workspace for the dependency


[dependency-groups]
main = [
    "albatross",
    "bird-feeder",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
