[project]
name = "my_builder"
version = "0.1.0"
description = "Custom image transformer"
requires-python = ">=3.10"
dependencies = []

# This section needs to be added to get uv sync to install this package (this package being seeds).
[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.entry-points."flyte.plugins.image_builders"]
my_builder = "my_builder.my_builder:MyImageBuilder"
