[project]
name = "image-classification-example"
version = "0.1.0"
description = "Flyte example for fine-tuning and serving image classification models"
requires-python = ">=3.12"
dependencies = [
    "flyte>=2.0.0b41",
]

[project.optional-dependencies]
# Core dependencies - common across all workflows
core = [
    "transformers",
    "torch",
    "pillow",
]

# Training dependencies - needed for model fine-tuning
training = [
    "image-classification-example[core]",
    "torchvision",
    "datasets",
    "numpy",
    "accelerate",  # For efficient training
]

# Serving dependencies - needed for model inference API
serving = [
    "image-classification-example[core]",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

# Batch inference dependencies - for large-scale inference
batch = [
    "image-classification-example[core]",
    "pandas",
    "pyarrow",
    "unionai-reuse>=0.1.9",
]

# All dependencies - for local development and testing
all = [
    "image-classification-example[training]",
    "image-classification-example[serving]",
    "image-classification-example[batch]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
